'S' option is weird

--- a/docs/200115/dabercro_hbb_200115.tex
+++ b/docs/200115/dabercro_hbb_200115.tex
@@ -273,7 +273,7 @@
     \vfill
     \begin{tabular}{|l|S|}
       \hline
-      Sample & Cross Section [pb] \\
+      Sample & \mathrm{Cross Section [pb]} \\
       \hline
       \texttt{DYJetsToLL\_M-50\_HT-70to100\_*} & 143.0 \\
       \texttt{DYJetsToLL\_M-50\_HT-100to200\_*} & 147.4 \\
